syntax = "proto3";
package users;

service Users {
  rpc CreateUnary(User) returns (Response) {}
  rpc CreateClientStreaming(stream User) returns (Response) {}
  rpc CreateServerStreaming(User) returns (stream Response) {};
  rpc CreateBidirectionalStreaming(stream User) returns (stream Response) {};
}

message Empty {}

message UserId { int32 id = 1; }

message User {
  int32 id = 1;
  string name = 2;
  int32 age = 3;
}

message UserList { repeated User users = 1; }

message Response {
  int32 stat_code = 1;
  string stat_msg = 2;
}